# tensorflow_object_detector_ros

./: .CMakeLists.txt.swp  .gitignore  .package.xml.swp  CMakeLists.txt  README.md  package.xml
config/: kanban_labels.txt  mscoco_labels.txt
launch/: object_detection.launch
src/: tensorflow_object_detector.cpp  tensorflow_object_detector.h  tensorflow_object_detector_node.cpp  tensorflow_object_detector_nodecore.cpp  tensorflow_object_detector_nodecore.h  tensorflow_util.cpp  tensorflow_util.h
